[gd_scene format=3 uid="uid://ddvv7tij5cilm"]

[ext_resource type="Script" uid="uid://b27d03hrhkmm8" path="res://Prototypes/Menus/Main Menu/main_menu.gd" id="1_v4spl"]
[ext_resource type="PackedScene" uid="uid://c6q62ufk5h678" path="res://Prototypes/Clicker/Scenes/clicker_m_scene.tscn" id="2_6hqkb"]
[ext_resource type="Texture2D" uid="uid://dbf2n277mjacr" path="res://Prototypes/Shmup/Assets/Demo/main menu/main_menu_bg 2.png" id="3_pq152"]
[ext_resource type="Texture2D" uid="uid://bhq41at1kkl52" path="res://Prototypes/Shmup/Assets/Demo/main menu/5C logo square.png" id="4_urq66"]
[ext_resource type="Texture2D" uid="uid://d35xlhmdxb3ef" path="res://Prototypes/Shmup/Assets/Demo/main menu/mask.png" id="5_qwvkh"]
[ext_resource type="VideoStream" uid="uid://dpxwy5cdyiwxp" path="res://Prototypes/Shmup/Assets/Demo/ExampleVideo.ogv" id="6_pq152"]
[ext_resource type="Texture2D" uid="uid://drk2wx48hwnks" path="res://Prototypes/Shmup/Assets/Demo/main menu/mockup v1.png" id="6_tx5ca"]
[ext_resource type="Texture2D" uid="uid://dqc6ka5pb25do" path="res://Prototypes/Shmup/Assets/Demo/main menu/BG LETRAS MENU.png" id="7_tx5ca"]
[ext_resource type="Script" uid="uid://cmhbsjxtbe4sw" path="res://Prototypes/Menus/Main Menu/menu_buttons.gd" id="7_wj63d"]
[ext_resource type="Texture2D" uid="uid://q5lsav1yk62c" path="res://Prototypes/Shmup/Assets/Demo/main menu/current_sel_button.png" id="8_dbg78"]
[ext_resource type="FontFile" uid="uid://1x7lyo6xmmfn" path="res://Prototypes/Clicker/Assets/DemoUI/Fonts/Inter-Italic-VariableFont_opsz,wght.ttf" id="9_dbg78"]
[ext_resource type="Script" uid="uid://37etfxc2ttta" path="res://Prototypes/Menus/Main Menu/buttons.gd" id="10_pq152"]
[ext_resource type="PackedScene" uid="uid://bpeyqs2poxgkh" path="res://Prototypes/Menus/PauseMenu/pause_menu.tscn" id="13_nc0wa"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pq152"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fj5g6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wj63d"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nc0wa"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cshrm"]

[node name="MainMenu" type="Node2D" unique_id=484857900]
script = ExtResource("1_v4spl")
play_scene = ExtResource("2_6hqkb")

[node name="Background" type="Sprite2D" parent="." unique_id=785724737]
texture = ExtResource("3_pq152")
centered = false
metadata/_edit_lock_ = true

[node name="Logo" type="Sprite2D" parent="." unique_id=1547133949]
position = Vector2(1361, 300)
texture = ExtResource("4_urq66")
metadata/_edit_lock_ = true

[node name="Mask" type="Sprite2D" parent="." unique_id=1516394632]
modulate = Color(0.17254902, 0.17254902, 0.17254902, 0.5686275)
clip_children = 1
position = Vector2(446, 540)
texture = ExtResource("5_qwvkh")
metadata/_edit_lock_ = true

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="Mask" unique_id=728957861]
offset_left = -604.0
offset_top = -671.0
offset_right = 1662.0
offset_bottom = 640.0
stream = ExtResource("6_pq152")
volume_db = -80.0
autoplay = true
expand = true
loop = true

[node name="Menu" type="Control" parent="." unique_id=731879527]
layout_mode = 3
anchors_preset = 0
offset_left = 2.0
offset_top = -1.0
offset_right = 1922.0
offset_bottom = 1084.0
script = ExtResource("7_wj63d")
metadata/_edit_lock_ = true

[node name="BG" type="Sprite2D" parent="Menu" unique_id=1191318347]
position = Vector2(958, 979)
texture = ExtResource("7_tx5ca")
metadata/_edit_lock_ = true

[node name="Indicator" type="Sprite2D" parent="Menu" unique_id=417256198]
position = Vector2(738, 877)
texture = ExtResource("8_dbg78")

[node name="Play" type="Node2D" parent="Menu" unique_id=1627501459]

[node name="Marker2D" type="Marker2D" parent="Menu/Play" unique_id=1528324560]
position = Vector2(738, 876)

[node name="Play" type="Button" parent="Menu/Play" unique_id=1750622274]
offset_left = 526.0
offset_top = 912.0
offset_right = 956.0
offset_bottom = 1047.0
theme_override_colors/font_color = Color(0.25490198, 0.6509804, 0.9647059, 1)
theme_override_colors/font_focus_color = Color(0.25490198, 0.6509804, 0.9647059, 1)
theme_override_colors/font_pressed_color = Color(0.25490198, 0.6509804, 0.9647059, 1)
theme_override_colors/font_hover_color = Color(0.25490198, 0.6509804, 0.9647059, 1)
theme_override_colors/font_hover_pressed_color = Color(0.25490198, 0.6509804, 0.9647059, 1)
theme_override_colors/font_outline_color = Color(0.25490198, 0.6509804, 0.9647059, 1)
theme_override_constants/outline_size = 9
theme_override_fonts/font = ExtResource("9_dbg78")
theme_override_font_sizes/font_size = 77
theme_override_styles/normal = SubResource("StyleBoxEmpty_pq152")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_fj5g6")
theme_override_styles/hover = SubResource("StyleBoxEmpty_wj63d")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_nc0wa")
theme_override_styles/focus = SubResource("StyleBoxEmpty_cshrm")
text = "PLAY"
script = ExtResource("10_pq152")

[node name="Settings" type="Node2D" parent="Menu" unique_id=1525613642]
position = Vector2(-447, 0)

[node name="Marker2D" type="Marker2D" parent="Menu/Settings" unique_id=1946184567]
position = Vector2(738, 876)

[node name="Settings" type="Button" parent="Menu/Settings" unique_id=1008666403]
offset_left = 526.0
offset_top = 912.0
offset_right = 971.0
offset_bottom = 1047.0
theme_override_colors/font_outline_color = Color(0.8745098, 0.8745098, 0.8745098, 1)
theme_override_constants/outline_size = 9
theme_override_fonts/font = ExtResource("9_dbg78")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_pq152")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_fj5g6")
theme_override_styles/hover = SubResource("StyleBoxEmpty_wj63d")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_nc0wa")
theme_override_styles/focus = SubResource("StyleBoxEmpty_cshrm")
text = "SETTINGS"
script = ExtResource("10_pq152")

[node name="Credits" type="Node2D" parent="Menu" unique_id=1900061830]
position = Vector2(425, 0)

[node name="Marker2D" type="Marker2D" parent="Menu/Credits" unique_id=1921659715]
position = Vector2(738, 876)

[node name="Credits" type="Button" parent="Menu/Credits" unique_id=1551305017]
offset_left = 534.0
offset_top = 912.0
offset_right = 968.0
offset_bottom = 1047.0
theme_override_colors/font_outline_color = Color(0.8745098, 0.8745098, 0.8745098, 1)
theme_override_constants/outline_size = 9
theme_override_fonts/font = ExtResource("9_dbg78")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_pq152")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_fj5g6")
theme_override_styles/hover = SubResource("StyleBoxEmpty_wj63d")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_nc0wa")
theme_override_styles/focus = SubResource("StyleBoxEmpty_cshrm")
text = "CREDITS"
script = ExtResource("10_pq152")

[node name="Exit" type="Node2D" parent="Menu" unique_id=374946507]
position = Vector2(865, 0)

[node name="Marker2D" type="Marker2D" parent="Menu/Exit" unique_id=256367844]
position = Vector2(738, 876)

[node name="Exit" type="Button" parent="Menu/Exit" unique_id=430622562]
offset_left = 531.0
offset_top = 912.0
offset_right = 971.0
offset_bottom = 1047.0
theme_override_colors/font_color = Color(0.69411767, 0.24313726, 0.3254902, 1)
theme_override_colors/font_focus_color = Color(0.69411767, 0.24313726, 0.3254902, 1)
theme_override_colors/font_pressed_color = Color(0.69411767, 0.24313726, 0.3254902, 1)
theme_override_colors/font_hover_color = Color(0.69411767, 0.24313726, 0.3254902, 1)
theme_override_colors/font_hover_pressed_color = Color(0.69411767, 0.24313726, 0.3254902, 1)
theme_override_colors/font_outline_color = Color(0.69411767, 0.24313726, 0.3254902, 1)
theme_override_constants/outline_size = 9
theme_override_fonts/font = ExtResource("9_dbg78")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_pq152")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_fj5g6")
theme_override_styles/hover = SubResource("StyleBoxEmpty_wj63d")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_nc0wa")
theme_override_styles/focus = SubResource("StyleBoxEmpty_cshrm")
text = "EXIT"
script = ExtResource("10_pq152")

[node name="Guia" type="Sprite2D" parent="." unique_id=2035131575]
visible = false
texture = ExtResource("6_tx5ca")
centered = false
metadata/_edit_lock_ = true

[node name="PauseMenu" parent="." unique_id=131753112 instance=ExtResource("13_nc0wa")]
visible = false

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="focus_entered" from="Menu/Play/Play" to="Menu/Play/Play" method="_on_focus_entered"]
[connection signal="focus_exited" from="Menu/Play/Play" to="Menu/Play/Play" method="_on_focus_exited"]
[connection signal="mouse_entered" from="Menu/Play/Play" to="Menu/Play/Play" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Menu/Play/Play" to="Menu/Play/Play" method="_on_mouse_exited"]
[connection signal="pressed" from="Menu/Play/Play" to="." method="_on_play_pressed"]
[connection signal="focus_entered" from="Menu/Settings/Settings" to="Menu/Settings/Settings" method="_on_focus_entered"]
[connection signal="focus_exited" from="Menu/Settings/Settings" to="Menu/Settings/Settings" method="_on_focus_exited"]
[connection signal="mouse_entered" from="Menu/Settings/Settings" to="Menu/Settings/Settings" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Menu/Settings/Settings" to="Menu/Settings/Settings" method="_on_mouse_exited"]
[connection signal="pressed" from="Menu/Settings/Settings" to="Menu" method="_on_settings_pressed"]
[connection signal="focus_entered" from="Menu/Credits/Credits" to="Menu/Credits/Credits" method="_on_focus_entered"]
[connection signal="focus_exited" from="Menu/Credits/Credits" to="Menu/Credits/Credits" method="_on_focus_exited"]
[connection signal="mouse_entered" from="Menu/Credits/Credits" to="Menu/Credits/Credits" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Menu/Credits/Credits" to="Menu/Credits/Credits" method="_on_mouse_exited"]
[connection signal="focus_entered" from="Menu/Exit/Exit" to="Menu/Exit/Exit" method="_on_focus_entered"]
[connection signal="focus_exited" from="Menu/Exit/Exit" to="Menu/Exit/Exit" method="_on_focus_exited"]
[connection signal="mouse_entered" from="Menu/Exit/Exit" to="Menu/Exit/Exit" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Menu/Exit/Exit" to="Menu/Exit/Exit" method="_on_mouse_exited"]
[connection signal="pressed" from="Menu/Exit/Exit" to="." method="_on_exit_pressed"]
[connection signal="visibility_changed" from="PauseMenu" to="." method="_on_pause_menu_visibility_changed"]
